# claude-agent-teams-deepdive

./: .pre-commit-hooks.yaml  AGENT_TEAM_CASE_STUDY.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPER_GUIDE.md  QUICK_START.md  USER_GUIDE.md
src/: cli.rs  config.rs  discovery.rs  error.rs  filter.rs  lib.rs  main.rs  model.rs  policy.rs  progress.rs
src/cache/: db.rs  migrations.rs  mod.rs
src/git/: blame.rs  diff.rs  mod.rs  utils.rs
src/output/: csv.rs  github_actions.rs  json.rs  markdown.rs  mod.rs  sarif.rs  text.rs
src/scanner/: incremental.rs  languages.rs  mmap.rs  mod.rs  regex.rs  treesitter.rs
tests/: cli_test.rs
tests/fixtures/: block_comments.js  false_positive.rs  sample.c  sample.cpp  sample.cs  sample.go  sample.java  sample.js  sample.py  sample.rb  sample.rs  sample.ts
